[refact]: 重构CustomSettingToggleButton类 - 将CustomSortButton更名为CustomSettingToggleButton - 提高CSTB类的可拓展性 - 修改CSTB类的构造方法,参数不再使用原ButtonToolTips类 - 增加相关lang文件

--- a/src/main/resources/assets/appliedenoughitems/lang/en_us.json
+++ b/src/main/resources/assets/appliedenoughitems/lang/en_us.json
@@ -1,3 +1,7 @@
 {
-  "gui.tooltips.appliedenoughitems.JEI": "JEI"
+  "gui.tooltips.appliedenoughitems.SortBy": "Sort By",
+  "gui.tooltips.appliedenoughitems.JEI": "JEI",
+  "gui.tooltips.appliedenoughitems.ItemName": "Item name",
+  "gui.tooltips.appliedenoughitems.NumberOfItems": "Number of items",
+  "gui.tooltips.appliedenoughitems.Mod": "Mod"
 }
